objects/tfn_EVC_Assessment_Events__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipName>EVC_Assessment_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_AE_Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_AE_EVC_Condition__c</fullName>
        <label>EVC Condition</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>--Initial Condition--</fullName>
                    <isActive>false</isActive>
                    <label>--Initial Condition--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_AE_EVC_Trend__c</fullName>
        <label>EVC Trend</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significant Improvement</fullName>
                </value>
                <value>
                    <fullName>Minor Improvement</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Minor Decline</fullName>
                </value>
                <value>
                    <fullName>Significant decline</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>--Initial Trend--</fullName>
                    <isActive>false</isActive>
                    <label>--Initial Trend--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_AE_Vegetation_Quality__c</fullName>
        <formula>VALUE( TEXT(tfn_Canopy_Cover_VQA__c) )+VALUE( TEXT( tfn_Lack_of_Weeds_VQA__c ) )+VALUE( TEXT( tfn_Large_Trees_VQA__c ) )+VALUE( TEXT( tfn_Logs_VQA__c ) )+VALUE( TEXT( tfn_Organic_Litter_VQA__c ) )+VALUE( TEXT( tfn_Recruitment_VQA__c ) )+VALUE( TEXT( tfn_Understorey_VQA__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vegetation Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Canopy_Cover_Cmnts__c</fullName>
        <label>Canopy Cover Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Canopy_Cover_VQA__c</fullName>
        <label>Canopy Cover VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_EVC_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EVC Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Species_EVC_Observation__c.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>$Source.Interest__c</valueField>
            </filterItems>
            <filterItems>
                <field>tfn_Species_EVC_Observation__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>EVC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species_EVC_Observation__c</referenceTo>
        <relationshipName>EVC_Assessment_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Lack_of_Weeds_Cmnts__c</fullName>
        <label>Lack of Weeds Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Lack_of_Weeds_VQA__c</fullName>
        <label>Lack of Weeds VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Large_Trees_Cmnts__c</fullName>
        <label>Large Trees Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Large_Trees_VQA__c</fullName>
        <inlineHelpText>value -0 (negative zero) means Not Applicable</inlineHelpText>
        <label>Large Trees VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Logs_Cmnts__c</fullName>
        <label>Logs Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Logs_VQA__c</fullName>
        <inlineHelpText>value -0 (negative zero) means Not Applicable</inlineHelpText>
        <label>Logs VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Organic_Litter_Cmnts__c</fullName>
        <label>Organic Litter Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Organic_Litter_VQA__c</fullName>
        <inlineHelpText>value -0 (negative zero) means Not Applicable</inlineHelpText>
        <label>Organic Litter VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Recruitment_Cmnts__c</fullName>
        <label>Recruitment Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Recruitment_VQA__c</fullName>
        <inlineHelpText>value -0 (negative zero) means Not Applicable</inlineHelpText>
        <label>Recruitment VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Trend_Condition_Comments__c</fullName>
        <label>Trend Condition Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Understorey_Cmnts__c</fullName>
        <label>Understorey Cmnts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Understorey_VQA__c</fullName>
        <inlineHelpText>value -0 (negative zero) means Not Applicable</inlineHelpText>
        <label>Understorey VQA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-0</fullName>
                    <default>true</default>
                    <label>-0</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_VQA_Comments__c</fullName>
        <label>VQA Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>EVC VQA</label>
    <nameField>
        <displayFormat>VQA-{00000}</displayFormat>
        <label>EVC Assessment Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EVC VQAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>